--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset ="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <script src="js/jquery-3.4.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type ="text/javascript" src="js/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <link href="css/bootstrap.min.css" rel = "stylesheet" type ="text/css"/>
-        <link href="css/bootstrap-grid.min.css" rel = "stylesheet" type ="text/css"/>
-        <link href="css/custom.css" rel ="stylesheet" type ="text/css"/>
+        <link rel ="stylesheet" href="css/bootstrap.min.css">
+        <link rel ="stylesheet" href="css/bootstrap-grid.min.css">
+        <link rel ="stylesheet" href="css/custom.css">
         
         <title>
 
