--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
                 </div>
         </div>
-        <div class="text-center"><img src="assets/self.JPG" class="img-fluid" alt="Responsive image">
+        <div class="text-center"><img src="assets/self.JPG" class="img-fluid selfie" alt="Responsive image">
         <p class="aboutme"><h2>Hello!</h2><br>
         You've stumbled upon my page, so let me tell you a little about myself.<br>
         <br>
