--- a/maps/vectortiles.html
+++ b/maps/vectortiles.html
@@ -19,7 +19,7 @@
         
         <nav class ="navbar navbar-expand-sm navbar-dark">
             <button class="navbar-toggler" type ="button" data-toggle ="collapse" data-target="#menuitems" aria-controls="menuitems" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"id="hamberder"></span><span class ="menu" id="spanmenu">  Menu</span>
+                <span class="navbar-toggler-icon"></span><span class ="menu" id="spanmenu">  Menu</span>
             </button>
             <div class = "collapse navbar-collapse" id="menuitems">
                 <div class = "navbar-nav">
@@ -39,9 +39,7 @@
         <div class="text-center">
             <p class="aboutme"><br>
             <br>
-            This map shows the proposed Union Cycliste International Bike Route on a shaded relief basemap.  The bike route spans over 2,000 miles from Bar Harbor, ME to
-            Clearwater, FL and is broken down into daily stages of about 100 miles/day.  The basemap was prepared from combining DEM and bathymetric data sources and 
-            manipulating those to highlight relief.  Landcover data was also used for the basemap coloring.<br><br>
+            These tiles were styled for a 1970's Hippie Theme Movie!  Enjoy the 3D buildings (where available) They are FAR OUT!<br><br>
             </p>
         </div>
         <div class="embed-responsive embed-responsive-4by3">
