--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         
         <nav class ="navbar navbar-expand-sm navbar-dark">
             <button class="navbar-toggler" type ="button" data-toggle ="collapse" data-target="#menuitems" aria-controls="menuitems" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"id="hamberder"></span><span class ="menu" id="spanmenu">  Menu</span>
+                <span class="navbar-toggler-icon"></span><span class ="menu" id="spanmenu">  Menu</span>
             </button>
             <div class = "collapse navbar-collapse" id="menuitems">
                 <div class = "navbar-nav">
