--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid d-sm-none">
+        <div class="jumbotron jumbotron-fluid d-none d-sm-block">
                 <div class ="container-fluid">
                     <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
                 </div>
