--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid d-none d-sm-block">
+        <div class="jumbotron jumbotron-fluid d-none d-md-block">
                 <div class ="container-fluid">
                     <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
                 </div>
         </div>
+        <div class="jumbotron jumbotron-fluid">
+            <div class ="container-fluid">
+                <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
+            </div>
+    </div>
         <div class="text-center"><img src="assets/self.JPG" class="img-fluid selfie" alt="Responsive image">
         <p class="aboutme"><h2>Hello!</h2><br>
         You've stumbled upon my page, so let me tell you a little about myself.<br>
