--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
                 </div>
         </div>
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid d-md-none">
             <div class ="container-fluid">
                 <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
             </div>
