--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </nav>
         <div class="jumbotron jumbotron-fluid d-none d-md-block">
                 <div class ="container-fluid">
-                    <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
+                    <h1 class ="display-4">About Me on big devices<small> | John DeLoretta</small></h1>
                 </div>
         </div>
         <div class="jumbotron jumbotron-fluid d-md-none">
             <div class ="container-fluid">
-                <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
+                <h1 class ="display-4">About Me on small devices<small> | John DeLoretta</small></h1>
             </div>
     </div>
         <div class="text-center"><img src="assets/self.JPG" class="img-fluid selfie" alt="Responsive image">
