web portfolio updates

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <div class = "collapse navbar-collapse" id="menuitems">
                 <div class = "navbar-nav">
                     <a class = "nav-item nav-link" href="index.html">About Me</a>
-                    
                     <a class = "nav-item nav-link" href="portfolio.html">Portfolio</a>
                     <a class = "nav-item nav-link" href="resume.html">Resume</a>
                     <a class = "nav-item nav-link" href="contact.html">Contact</a>
@@ -38,7 +37,7 @@
         </div>
         <div class="jumbotron jumbotron-fluid d-md-none">
             <div class ="container-fluid">
-                <h4 class ="display-4">About Me on small devices<small> | John DeLoretta</small></h4>
+                <h4 class ="smalljumbo">About Me on small devices<small> | John DeLoretta</small></h4>
             </div>
     </div>
         <div class="text-center"><img src="assets/self.JPG" class="img-fluid selfie" alt="Responsive image">
