Added Mini Jumbotrons

--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,15 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid">
-                <div class ="container-fluid">
-                    <h1 class ="display-4">Contact Me<small> | John DeLoretta</small></h1>
-                </div>
+        <div class="jumbotron jumbotron-fluid d-none d-md-block">
+            <div class ="container-fluid">
+                <h1 class ="display-4">Contact Me<small> | John DeLoretta</small></h1>
+            </div>
+        </div>
+        <div class="jumbotron jumbotron-fluid d-md-none">
+            <div class ="container-fluid">
+                <h4 class ="smalljumbo">Contact Me<small> | John DeLoretta</small></h4>
+            </div>
         </div>
         
 
