--- a/maps/vectortiles.html
+++ b/maps/vectortiles.html
@@ -24,18 +24,23 @@
             <div class = "collapse navbar-collapse" id="menuitems">
                 <div class = "navbar-nav">
                     <a class = "nav-item nav-link" href="../index.html">About Me</a>
-                    
                     <a class = "nav-item nav-link" href="../portfolio.html">Portfolio</a>
                     <a class = "nav-item nav-link" href="../resume.html">Resume</a>
                     <a class = "nav-item nav-link" href="../contact.html">Contact</a>
                 </div>
             </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid">
-                <div class ="container-fluid">
-                    <h1 class ="display-4">Map Samples<small> | Hippie Vector Tiles</small></h1>
-                </div>
+        <div class="jumbotron jumbotron-fluid d-none d-md-block">
+            <div class ="container-fluid">
+                <h1 class ="display-4">Map Samples<small> | Hippie Vector Tiles</small></h1>
+            </div>
         </div>
+        <div class="jumbotron jumbotron-fluid d-md-none">
+            <div class ="container-fluid">
+                <h4 class ="smalljumbo">Map Samples<small> | Hippie Vector Tiles</small></h4>
+            </div>
+        </div>
+        
         <div class="text-center">
             <p class="aboutme"><br>
             <br>
