--- a/resume.html
+++ b/resume.html
@@ -31,11 +31,17 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid">
-                <div class ="container-fluid">
-                    <h1 class ="display-4">Resume<small> | John DeLoretta</small></h1>
-                </div>
+        <div class="jumbotron jumbotron-fluid d-none d-md-block">
+            <div class ="container-fluid">
+                <h1 class ="display-4">Resume<small> | John DeLoretta</small></h1>
+            </div>
         </div>
+        <div class="jumbotron jumbotron-fluid d-md-none">
+            <div class ="container-fluid">
+                <h4 class ="smalljumbo">Resume<small> | John DeLoretta</small></h4>
+            </div>
+        </div>
+        
         <div class="text-center"><img src="assets/wordcloud.png" class="img-fluid wordcloud" alt="Responsive image"></div>
         
         <div class="container-sm">
