--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             </div>
         </nav>
         <div class="jumbotron jumbotron-fluid d-none d-md-block">
-                <div class ="container-fluid">
-                    <h1 class ="display-4">About Me on big devices<small> | John DeLoretta</small></h1>
-                </div>
+            <div class ="container-fluid">
+                <h1 class ="display-4">About Me<small> | John DeLoretta</small></h1>
+            </div>
         </div>
         <div class="jumbotron jumbotron-fluid d-md-none">
             <div class ="container-fluid">
-                <h4 class ="smalljumbo">About Me on small devices<small> | John DeLoretta</small></h4>
+                <h4 class ="smalljumbo">About Me<small> | John DeLoretta</small></h4>
             </div>
-    </div>
+        </div>
         <div class="text-center"><img src="assets/self.JPG" class="img-fluid selfie" alt="Responsive image">
         <p class="aboutme"><h2>Hello!</h2><br>
         You've stumbled upon my page, so let me tell you a little about myself.<br>
