--- a/maps/infographic.html
+++ b/maps/infographic.html
@@ -31,11 +31,17 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbotron jumbotron-fluid">
-                <div class ="container-fluid">
-                    <h1 class ="display-4">Map Samples<small> | Opioid Addiction in Pennsylvania</small></h1>
-                </div>
+        <div class="jumbotron jumbotron-fluid d-none d-md-block">
+            <div class ="container-fluid">
+                <h1 class ="display-4">Map Samples<small> | Opioid Addiction in Pennsylvania</small></h1>
+            </div>
         </div>
+        <div class="jumbotron jumbotron-fluid d-md-none">
+            <div class ="container-fluid">
+                <h4 class ="smalljumbo">Map Samples<small> | Opioid Addiction in Pennsylvania</small></h4>
+            </div>
+        </div>
+        
         <div class="text-center">
             <p class="aboutme"><br>
             <br>
