Web Portfolio Updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="maps/hillshade.html"><img src ="assets/hillshade_thumb.png" class="img-fluid mapthumb"/>Union Cycliste International Hillshade
+                    <a href="maps/hillshade.html"><img src ="assets/hillshade_thumb.png" class="img-fluid mapthumb"/>Union Cycliste Shaded Relief
                     </a>
                 </div>
                 <div class ="col-sm-4">
