--- a/resume.html
+++ b/resume.html
@@ -93,7 +93,7 @@
                     <br>
                     <h5 class="resumeh5">Internship with the Chester County Department of Computing and Information Services January-March 2008</h5>
                     <br>
-            <h3 class="resumeheader">ADDITIONAL TRAINING/CERTIFICATIONS</h3>
+            <h3 class="resumeheader">ADDITIONAL TRAINING & CERTIFICATIONS</h3>
                     <br>
                     <li>GIS Certificate through Shippensburg University, 2008</li>
                     <br>
