--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
                     <li>Continuously striving to expand my technical capabilities to provide clients the best possible solutions.</li><br>
             <h3 class="resumeheader">EDUCATION</h3>
             <br>
-                    <ul class="school">
+                    <!--<ul class="school"> -->
                         <li>Master’s of Science is GIS and Web Map Programming, Expected 2022</li>
                         <li>University of Wisconsin-Madison, Madison, WI</li>
                         <br>
@@ -64,7 +64,7 @@
                         <li>Shippensburg University, Shippensburg, PA</li>
                         <li>Cum Laude</li>
                         <li>3.5 Q.P.A.</li>
-                    </ul><br>
+                    <!--</ul>--><br>
             <h3 class="resumeheader">WORK EXPERIENCE</h3>
             <br>
                     <h5 class="resumeh5">GIS Analyst at RETTEW Associates April 2014-Present</h5>
