updated experience years

--- a/resume.html
+++ b/resume.html
@@ -49,9 +49,9 @@
             <ul class ="resumelist">
             <h3 class="resumeheader">EXECUTIVE SUMMARY</h3>
             <br>
-                    <li>Professional GIS enthusiast with 11 years’ experience in map production, data management, and data analysis as an environmental consultant.</li>
+                    <li>Professional GIS enthusiast with 13 years’ experience in map production, data management, and data analysis as an environmental consultant.</li>
                     <li>Support a wide variety of markets including agencies under the U.S. Department of Defense, federal and state transportation departments, private oil and gas clients, telecommunications, local water/sewer authorities, and private development clients.</li>
-                    <li>Adept in the Esri ecosystem including ArcMap, ArcGIS Server, ArcGIS Online, Portal for ArcGIS, and Collector for ArcGIS. Versed writing scripts with Python 2.x and many associated libraries. Practical working knowledge and experience with MS SQL Server, PostgreSQL/PostGIS, OGR/GDAL, Adobe Illustrator/Photoshop, MapBox, HTML, CSS, and JavaScript.</li>
+                    <li>Adept in the Esri ecosystem including ArcMap, ArcGIS Server, ArcGIS Online, Portal for ArcGIS, and Collector for ArcGIS. Versed writing scripts with Python 2.x and many associated libraries. Practical working knowledge and experience with MS SQL Server, PostgreSQL/PostGIS, OGR/GDAL, Adobe Illustrator/Photoshop, MapBox, HTML, CSS, and JavaScript, and Java.</li>
                     <li>Engaged in recognizing workflow and process improvements to promote task efficiency and eliminate sources of errors.</li>
                     <li>Continuously striving to expand my technical capabilities to provide clients the best possible solutions.</li><br>
             <h3 class="resumeheader">EDUCATION</h3>
@@ -81,7 +81,7 @@
                     <li>Assist in the management and administration of Adobe Flex web mapping applications and associated client websites.</li>
                     <li>Establish and maintain map templates, layer symbologies, and mapping procedures for the GIS Department and specific client requirements.</li>
                     <li>Author quality assurance/ quality control procedures for preparation, review, and submittal of maps and data to clients.</li>
-                    <li>Develop custom scripts using Python, ArcPy, and other Python libraries as needed to automate workflows and time-consuming processes, including custom map exports and management and data acquisition and administration.</li>
+                    <li>Develop custom scripts using Python, ArcPy, and other Python libraries as needed to automate workflows and time-consuming processes, including custom map exports, data acquisition, and administration.</li>
                     <br>
                     <h5 class="resumeh5">GIS Specialist / Environmental Scientist with Stell Environmental Enterprises, Inc.–July 2008-April 2014</h5>
                     <li>Manage all GIS tasks, proposals, assignments and deliverables for federal, state, and local government clients.</li>
@@ -119,6 +119,8 @@
                     <li>Using Open Source Tools to Create an Enterprise GIS</li>
                     <br>
                     <h5 class="resumeh5">Conferences</h5>
+                    <li>Esri User Conference 2021 (Virtual)</li>
+                    <li>Esri Developer Summit 2021 (Virtual)</li>
                     <li>Esri User Conference 2018</li>
                     <li>Harrisburg University GeoDev Summit 2018</li>
                     <li>Esri Developer Summit 2017</li>
