--- a/maps/drought_wildfire.html
+++ b/maps/drought_wildfire.html
@@ -49,10 +49,10 @@
             for the final project in Geography 575 - Interactive Cartography & Visualization.<br><br>
             </p>
         </div>
+        <div class="text-center"><a href="https://jddelo.github.io/geo_575_Final/"><img src ="wildfire_thumb.png" class="img-fluid mapthumb" alt="Responsive image"/>
+        </a>
+            
 
-        <div class="embed-responsive embed-responsive-1by1">
-            <iframe class="embed-responsive-item" title="Drought Wildfires" src="https://jddelo.github.io/geo_575_Final/"></iframe>
-        </div>
 
 
     </body>
