--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="https://jddelo.github.io/geo_575_Final/"><img src ="assets/wildfire_thumb.png" class="img-fluid mapthumb"/>Drought & Wildfires 2000-2018
+                    <a href="maps/drought_wildfire.html"><img src ="assets/wildfire_thumb.png" class="img-fluid mapthumb"/>Drought & Wildfires 2000-2018
                     </a>
                 </div>
                 <div class ="col-sm-4">
