--- a/maps/drought_wildfire.html
+++ b/maps/drought_wildfire.html
@@ -49,7 +49,7 @@
             for the final project in Geography 575 - Interactive Cartography & Visualization.<br><br>
             </p>
         </div>
-        <div class="mapview"><a href="https://jddelo.github.io/geo_575_Final"><img src ="assets/wildfire_thumb.png"/>Studying the Effect of Drought on Wildfires in the United States
+        <div class="mapview"><a href="https://jddelo.github.io/geo_575_Final"><img src ="../assets/wildfire_thumb.png"/>Studying the Effect of Drought on Wildfires in the United States
         </a>
         </div>
 
