--- a/maps/drought_wildfire.html
+++ b/maps/drought_wildfire.html
@@ -49,11 +49,7 @@
             for the final project in Geography 575 - Interactive Cartography & Visualization.<br><br>
             </p>
         </div>
-<<<<<<< HEAD
-        <div class="text-center"><a href="https://jddelo.github.io/geo_575_Final"><img src ="assets/wildfire_thumb.png"class="img-fluid mapthumb"/>Studying the Effect of Drought on Wildfires in the United States
-=======
-        <div class="mapview"><a href="https://jddelo.github.io/geo_575_Final"><img src ="../assets/wildfire_thumb.png"/>
->>>>>>> b8d0ffce3125962cf2f6ee99e7c3d4df403d42c5
+        <div class="text-center"><a href="https://jddelo.github.io/geo_575_Final"><img src ="../assets/wildfire_thumb.png"class="img-fluid mapthumb"/>Studying the Effect of Drought on Wildfires in the United States
         </a>
         </div>
 
