added geo777 project

--- a/maps/drought_wildfire.html
+++ b/maps/drought_wildfire.html
@@ -45,7 +45,7 @@
         <div class="text-center">
             <p class="aboutme"><br>
             <br>
-            This map illustrates the effect of drought on the occurance and severity of wildfires from 2000-2018.  It was created with HTML, CSS, JavaScript, D3, and the Esri-Leaflet Library as a group project 
+            This web map illustrates the effect of drought on the occurance and severity of wildfires from 2000-2018.  It was created with HTML, CSS, JavaScript, D3, and the Esri-Leaflet Library 
             for the final project in Geography 575 - Interactive Cartography & Visualization.<br><br>
             </p>
         </div>
