--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,20 @@
                     </a>
                 </div>
             </div>
+            <div class = "row">
+                <div class="col-sm-4">
+                    <a href="maps/infographic.html"><img src ="assets/infographic_thumb.png" class="img-fluid mapthumb"/>Opioid Infographic
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="maps/drought_wildfire.html"><img src ="assets/wildfire_thumb.png" class="img-fluid mapthumb"/>Drought & Wildfires 2000-2018
+                    </a>
+                </div>
+                <div class ="col-sm-4">
+                    <a href="maps/vectortiles.html"><img src ="assets/vector_tiles_thumb.png"class="img-fluid mapthumb"/>1970s Hippie Vector Tiles
+                    </a>
+                </div>
+            </div>
 
         </div>
 
