--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h4 class ="smalljumbo">About Me<small> | John DeLoretta</small></h4>
             </div>
         </div>
-        <div class="text-center"><img src="assets/self.JPG" class="img-fluid selfie" alt="Responsive image">
+        <div class="text-center bknd_image"><img src="assets/self.JPG" class="img-fluid selfie" alt="Responsive image">
         <p class="aboutme"><h2>Hello!</h2><br>
         You've stumbled upon my page, so let me tell you a little about myself.<br>
         <br>
