--- a/portfolio.html
+++ b/portfolio.html
@@ -45,29 +45,25 @@
 
         <div class = "container-fluid portfolio">
             <div class = "row">
-                <div class="col-sm-4">
-                    <a href="maps/infographic.html"><img src ="assets/infographic_thumb.png" class="img-fluid mapthumb"/>Opioid Infographic
+                <div class="col-sm-4" style = "margin-bottom:10vh">
+                    <a href="maps/bm_bgalgae.html"><img src ="assets/bm_bgalgae_thumb2.PNG" class="img-fluid mapthumb"/>Blue-Green Algae Watershed Study
                     </a>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4" style = "margin-bottom:10vh">
+                    <a href="maps/bm_recreation.html"><img src ="assets/bm_recreation_thumb2.PNG" class="img-fluid mapthumb"/>Blue Marsh Lake Recreation Web Map
+                    </a>
+                </div>
+                <div class="col-sm-4" style = "margin-bottom:10vh">
                     <a href="maps/drought_wildfire.html"><img src ="assets/wildfire_thumb.png" class="img-fluid mapthumb"/>Drought & Wildfires 2000-2018
-                    </a>
-                </div>
-                <div class ="col-sm-4">
-                    <a href="maps/vectortiles.html"><img src ="assets/vector_tiles_thumb.png"class="img-fluid mapthumb"/>1970s Hippie Vector Tiles
                     </a>
                 </div>
             </div>
             <div class = "row">
-                <div class="col-sm-4">
+                <div class="col-sm-4" style = "margin-bottom:10vh">
                     <a href="maps/infographic.html"><img src ="assets/infographic_thumb.png" class="img-fluid mapthumb"/>Opioid Infographic
                     </a>
                 </div>
-                <div class="col-sm-4">
-                    <a href="maps/drought_wildfire.html"><img src ="assets/wildfire_thumb.png" class="img-fluid mapthumb"/>Drought & Wildfires 2000-2018
-                    </a>
-                </div>
-                <div class ="col-sm-4">
+                <div class ="col-sm-4" style = "margin-bottom:10vh">
                     <a href="maps/vectortiles.html"><img src ="assets/vector_tiles_thumb.png"class="img-fluid mapthumb"/>1970s Hippie Vector Tiles
                     </a>
                 </div>
