--- a/portfolio.html
+++ b/portfolio.html
@@ -46,11 +46,11 @@
         <div class = "container-fluid portfolio">
             <div class = "row">
                 <div class="col-sm-4" style = "margin-bottom:10vh">
-                    <a href="maps/bm_bgalgae.html"><img src ="assets/bm_bgalgae_thumb2.PNG" class="img-fluid mapthumb"/>Blue-Green Algae Watershed Study
+                    <a href="maps/bm_bgalgae.html"><img src ="assets/bm_bgalgae_thumb2.png" class="img-fluid mapthumb"/>Blue-Green Algae Watershed Study
                     </a>
                 </div>
                 <div class="col-sm-4" style = "margin-bottom:10vh">
-                    <a href="maps/bm_recreation.html"><img src ="assets/bm_recreation_thumb2.PNG" class="img-fluid mapthumb"/>Blue Marsh Lake Recreation Web Map
+                    <a href="maps/bm_recreation.html"><img src ="assets/bm_recreation_thumb2.png" class="img-fluid mapthumb"/>Blue Marsh Lake Recreation Web Map
                     </a>
                 </div>
                 <div class="col-sm-4" style = "margin-bottom:10vh">
