--- a/resume.html
+++ b/resume.html
@@ -94,6 +94,8 @@
                     <br>
             <h3 class="resumeheader">ADDITIONAL TRAINING & CERTIFICATIONS</h3>
                     <br>
+                    <li>FAA Part 107 Remote Pilot Certification, December 2021</li>
+                    <br>
                     <li>GIS Certificate through Shippensburg University, 2008</li>
                     <br>
                     <h5 class="resumeh5">Esri Virtual Campus Training</h5>
