--- a/index.html
+++ b/index.html
@@ -47,20 +47,23 @@
         I love everything GIS and map related.  Joining spatial information with non-spatial, tabular data is one of the most powerful tools in data analysis.
         They say "seeing is believing," and anyone familiar with GIS knows this to be absolutely true. A map can tell you so much more than charts and graphs and the only
         way to find these hidden messages is to watch your data come alive through geography.  The only thing better than being able to view and interact with your data in
-        this light is the ability to share this insight with others.  In my opinion, there's almost nothing on earth that can't be improved through GIS and spatial analysis.<br>
+        this light is the ability to share this insight with others.  In my opinion, almost everything on earth can be improved through GIS and spatial analysis.<br>
         <br>
         <h3>Professional Experience in a Nutshell</h3><br>
-        I am a professional GIS enthusiast with 14 years' experience in map production,
+        I am a professional GIS enthusiast with 15 years' experience in map production,
         data management, and data analysis as an environmental consultant. I have worked for many types of clients including agencies under the U.S. Department of
         Defense, federal and state transportation departments, private oil and gas clients, telecommunications, local water/sewer authorities, and private development
         clients. <br><br>
         Projects I have worked on range from wetland delineations, groundwater sampling, environmental soil sampling, environmental site assessments, cultural resource
         investigations, water/sewer asset management, pipeline class location determination studies, Naval firing range design, unexploded ordnance investigations, ground
-        penetrating radar studies, to recreational lake capacity/usage studies.<br>
+        penetrating radar studies, to recreational lake capacity/usage studies.  <br><br>
+        On the web GIS/development side I manage multiple water client's ArcGIS Online accounts and data, including integrations with ArcGIS Field Maps and Survey 123 for asset management and inspection/maintenance schedules and record keeping.
+        I work with internal clients on the development and support of a custom plugin in QGIS with many custom map tools and functions to assist in fiber optic line routing.  Currently most of my custom web development has been through my graduate coursework.<br><br>
+        I love writing python scripts wherever I can.  Repetitive, manual tasks bother me, so I am always looking for ways to get the computer to do them for me.
         <br>
         <h3>Let's Get Personal</h3><br>
         Happily married with two small children- nothing makes me happier than to spend time and laugh and play with my family.  I am employed full time at an engineering
-        firm as a GIS Analyst and also I am working towards a Master's degree in GIS from the University of Wisconsin-Madison. I enjoy golfing, fishing, hockey, and being outdoors.
+        firm as a GIS Analyst and also have recently earned a Master's degree in Cartography and Geographic Information Systems from the University of Wisconsin-Madison. I enjoy golfing, fishing, hockey, video games and being outdoors.
         One day I will return to those activities, whenever free time once again bestows me with its blessing.
         
         </p>
