--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
             
                         <li>Master’s of Science in Cartography and Geographic Information Systems, December 2022 <br>University of Wisconsin-Madison, Madison, WI</li>
                         <br>
-                        <li>Bachelor of Science in Geoenvironmental Studies, August 2008 <br>Shippensburg University, Shippensburg, PA<br>Cum Laude<br>3.5 Q.P.A.</li>
+                        <li>Bachelor of Science in Geoenvironmental Studies, August 2008 <br>Shippensburg University, Shippensburg, PA</li>
             <br>
             <h3 class="resumeheader">WORK EXPERIENCE</h3>
             <br>
